src/tests/ci/assignment_5_functions/invalid_semantic/29_forward_declaration_mismatch.c
int add(int a, int b);

int add(int a) {
    return a;
}

int main() {
    return add(1, 2);
}